--- a/.github/workflows/gotests.yml
+++ b/.github/workflows/gotests.yml
@@ -11,10 +11,7 @@ on:
 
 jobs:
   test:
-    strategy:
-      matrix:
-        platform: [ubuntu-latest, macos-latest, windows-latest]
-    runs-on: ${{ matrix.platform }}
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
