--- a/.github/workflows/gochecks.yml
+++ b/.github/workflows/gochecks.yml
@@ -12,10 +12,8 @@ on:
       - "**.go"
 
 jobs:
-  checks:
-    env:
-      GO111MODULE: on
-    name: checks
+  lint:
+    name: lint
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -27,10 +25,26 @@ jobs:
         with:
           version: latest
 
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Setup Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: "1.20"
       - name: Install dependencies
         run: go get .
       - name: Test with the Go CLI
         run: go test
+
+  gosec:
+    runs-on: ubuntu-latest
+    env:
+      GO111MODULE: on
+    steps:
+      - name: Checkout Source
+        uses: actions/checkout@v4
 
       - name: Run Gosec Security Scanner
         uses: securego/gosec@master
