--- a/.github/workflows/go-ci.yml
+++ b/.github/workflows/go-ci.yml
@@ -14,12 +14,14 @@ on:
       - "go.sum"
 
 concurrency:
-  group: goflat-ci-${{ github.ref }}
+  group: goflat-go-ci-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
   sast:
-    uses: notdodo/github-actions/.github/workflows/go-security-scan.yml@a61f17e4551042735886e3c91a1af1c6a743b465
+    uses: notdodo/github-actions/.github/workflows/go-security-scan.yml@2e84638563b65587b42ba8ab87ccdf1922c412dd
+    # go-sec-v0.0.0
 
   build-and-test:
-    uses: notdodo/github-actions/.github/workflows/go-build-and-test.yml@a61f17e4551042735886e3c91a1af1c6a743b465
+    uses: notdodo/github-actions/.github/workflows/go-ci.yml@2e84638563b65587b42ba8ab87ccdf1922c412dd
+    # go-ci-v0.0.0
