--- a/.github/workflows/go-ci.yml
+++ b/.github/workflows/go-ci.yml
@@ -1,27 +1,31 @@
 name: Golang CI
 on:
   push:
-    branches:
-      - main
-    paths:
-      - "**.go"
-      - "go.mod"
-      - "go.sum"
-      - ".github/workflows/go-ci.yml"
   pull_request:
-    paths:
-      - "**.go"
-      - "go.mod"
-      - "go.sum"
-      - ".github/workflows/go-ci.yml"
 
 concurrency:
   group: goflat-go-ci-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
-  sast:
+  sast-go:
+    permissions:
+      contents: read
+      pull-requests: write
+      checks: write
+      security-events: write
     uses: notdodo/github-actions/.github/workflows/go-security-scan.yml@go-sec-v0
 
+  sast:
+    permissions:
+      contents: read
+      pull-requests: write
+      security-events: write
+    uses: notdodo/github-actions/.github/workflows/sast.yml@sast-v0
+
   build-and-test:
+    permissions:
+      contents: write
+      pull-requests: write
+      checks: write
     uses: notdodo/github-actions/.github/workflows/go-ci.yml@go-ci-v0
